Fix portfolio margin causing gap above footer

--- a/css/main.css
+++ b/css/main.css
@@ -7217,7 +7217,7 @@ article {
   .portfolio img {
     display: block;
     margin: auto; }
-  .portfolio .row {
+  .portfolio .row:not(:last-child) {
     margin-bottom: 2rem; }
 
 footer {
