--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -5,7 +5,7 @@
     display: block;
     margin: auto;
   }
-  .row {
+  .row:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
